<?xml version="1.0"?>
<package format="2">
  <name>nclt_data_import</name>
  <version>2.1.0</version>
  <description>
    Plugin to import or export data to/from the VIMap such as the trajectory,
    or sensor extrinsics.
  </description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>maplab_common</depend>
  <depend>nclt_tools</depend>
  <depend>sensors</depend>
  <depend>vi_map</depend>
</package>
